# aarch64

./: .gitignore  Makefile  aarch64-unknown-custom.json  kernel.lds  main.c  pl011.c  pl011.h
bootstrap/: Makefile  alloc.c  alloc.h  config.c  config.h  interrupts.S  ints.S  list.c  list.h  log.cc  log.h  main.c  main.cc  memory.cc  memory.h  pl011.c  pl011.cc  pl011.h  relocate.c  start.S  start.s
c/: Makefile  crt.c  relocate.c  string.c  string.h
cc/: Makefile  algorithm  ccrt.cc  cstddef  cstdint  cstring  memory  new  new.cc  optional  type_traits  utility
common/: Makefile  allocator.h  endian.cc  endian.h  fixed_vector.h  intrusive_list.cc  intrusive_list.h  logging.cc  logging.h  math.cc  math.h  stream.cc  stream.h  string_view.cc  string_view.h  vector.h
fdt/: Makefile  blob.cc  blob.h  scanner.cc  scanner.h  span.h
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/bootstrap/: Cargo.toml
kernel/devicetree/: Cargo.toml
kernel/interrupt/: Cargo.toml
kernel/intrusive/: Cargo.toml
kernel/kernel/: Cargo.toml
kernel/kernel/src/: lib.rs  setup.rs
kernel/log/: Cargo.toml
kernel/memalloc/: Cargo.toml
kernel/memory/: Cargo.toml
kernel/numeric/: Cargo.toml
memory/: Makefile  alloc.cc  alloc.h  arch.h  cache.cc  cache.h  memory.cc  memory.h  phys.cc  phys.h  space.cc  space.h
util/: Makefile  algorithms.h  allocator.h  endian.cc  endian.h  fixed_vector.h  intrusive_list.cc  intrusive_list.h  math.cc  math.h  new.cc  new.h  stddef.h  stdint.h  string.cc  string.h  string_view.cc  string_view.h  type_traits.h  utility.h  vector.h
(+27 files in other folders)
