[package]
name = "kernel"
version = "0.1.0"
authors = ["Mike Krinkin <krinkin.m.u@gmail.com>"]
edition = "2018"

[lib]
name = "kernel"
crate-type = ["staticlib", "rlib"]

[dependencies]
bootstrap = { path = "../bootstrap" }
devicetree = { path = "../devicetree" }
interrupt = { path = "../interrupt" }
memory = { path = "../memory" }
pl011 = { path = "../pl011" }
runtime = { path = "../runtime" }
